--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+# Name of website
+title: Matt Randell Docs
+
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
